FIX: Translate 'User not found' to pt_BR
- Add Locale Middleware. Now, set 'Accept-Language' in request Header
define response language.
- Set 'User not found' as translatable string

--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: poedit\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-15 16:17-0300\n"
+"POT-Creation-Date: 2020-01-16 13:05-0300\n"
 "PO-Revision-Date: 2020-01-14 17:09\n"
 "Last-Translator: Igor Fernandes (igorxp5)\n"
 "Language-Team: Portuguese, Brazilian\n"
@@ -52,7 +52,7 @@ msgstr "Usuário"
 
 #: api_v1/models/user.py:19
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: api_v1/translation/__init__.py:7
 #, fuzzy, python-format
@@ -64,10 +64,6 @@ msgstr "%(label_name)s não pode ser nulo"
 msgid "%(label_name)s cannot be empty"
 msgstr "%(label_name)s não pode ser vazio"
 
-#: applada/settings.py:125
-msgid "English"
-msgstr ""
-
-#: applada/settings.py:126
-msgid "Português (Brasil)"
-msgstr ""
+#: api_v1/views/users.py:23
+msgid "User not found"
+msgstr "Usuário não encontrado"
